[package]
name = "rust_rand"
version = "0.1.0"
edition = "2021"
authors = ["Tsar Bomba Nick"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_rand"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]
